[gd_scene load_steps=35 format=3 uid="uid://d4avb1r3ohetp"]

[ext_resource type="Script" path="res://scripts/ui/GUI.gd" id="1_vypfl"]
[ext_resource type="PackedScene" uid="uid://dw4njm128t6yw" path="res://scenes/2d/ui/Tooltip.tscn" id="2_8t721"]
[ext_resource type="PackedScene" uid="uid://c6jqsdvcncay5" path="res://scenes/2d/MyTooltip.tscn" id="3_4amhc"]
[ext_resource type="PackedScene" uid="uid://caqxce2hd6oam" path="res://scenes/2d/ui/MessageUI.tscn" id="3_ouymi"]
[ext_resource type="Script" path="res://scripts/ui/BattleUI.gd" id="4_4wdqw"]
[ext_resource type="PackedScene" uid="uid://d6qdqp0vqao0" path="res://scenes/2d/ui/UiUnitInfo.tscn" id="5_10q7o"]
[ext_resource type="Script" path="res://scripts/ui/UiToLogicBindings.gd" id="5_e0e17"]
[ext_resource type="Script" path="res://scripts/ui/UiUnitAbilities.gd" id="6_q18j3"]
[ext_resource type="ButtonGroup" uid="uid://bsrwr3ppmws16" path="res://data/settings/ui/ButtonGroup.tres" id="7_7jswe"]
[ext_resource type="Theme" uid="uid://f2kane5qr4jt" path="res://data/settings/ui/gothic_ui_theme_0.tres" id="7_omlrh"]
[ext_resource type="Script" path="res://scripts/ui/UiBtnAbility.gd" id="8_7jrsu"]
[ext_resource type="Shortcut" uid="uid://wn8cqlrakbky" path="res://data/settings/shortcuts/ShortcutNextTurn.tres" id="12_e4ykp"]
[ext_resource type="FontFile" uid="uid://cuq7uy43wcnc3" path="res://data/settings/ui/alagard.ttf" id="12_mbk3r"]
[ext_resource type="Script" path="res://scripts/ui/UiSelectedUnitInfo.gd" id="13_28ycl"]
[ext_resource type="PackedScene" path="res://scenes/2d/ui/UiUnitsList.tscn" id="13_iompt"]
[ext_resource type="PackedScene" uid="uid://jcmgoqb752kg" path="res://scenes/2d/ui/UiWeaponSelector.tscn" id="14_sae6o"]
[ext_resource type="PackedScene" uid="uid://djecb7bf3eldt" path="res://scenes/2d/UnitSetupUI.tscn" id="15_6tte0"]
[ext_resource type="Texture2D" uid="uid://q3ym6naktr2o" path="res://content/sprites/ui/icon_move.tres" id="16_rbp2r"]
[ext_resource type="Script" path="res://scripts/ui/TimePointsUI.gd" id="17_1dr40"]
[ext_resource type="Texture2D" uid="uid://dqpy6e3t5bvms" path="res://content/sprites/ui/icon_reload.tres" id="18_eefw8"]

[sub_resource type="LabelSettings" id="LabelSettings_v8nyb"]
font_size = 8

[sub_resource type="LabelSettings" id="LabelSettings_y2ytp"]
font = ExtResource("12_mbk3r")
font_size = 40

[sub_resource type="InputEventKey" id="InputEventKey_gxohk"]
keycode = 49

[sub_resource type="Shortcut" id="Shortcut_b0hfn"]
events = [SubResource("InputEventKey_gxohk")]

[sub_resource type="InputEventKey" id="InputEventKey_4h2fk"]
device = -1
keycode = 50
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_em5ud"]
events = [SubResource("InputEventKey_4h2fk")]

[sub_resource type="InputEventKey" id="InputEventKey_ldgbv"]
device = -1
keycode = 51
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_xx4o5"]
events = [SubResource("InputEventKey_ldgbv")]

[sub_resource type="InputEventKey" id="InputEventKey_iunw6"]
device = -1
keycode = 52
unicode = 52

[sub_resource type="Shortcut" id="Shortcut_5qic7"]
events = [SubResource("InputEventKey_iunw6")]

[sub_resource type="InputEventKey" id="InputEventKey_o7cbd"]
device = -1
keycode = 53
unicode = 53

[sub_resource type="Shortcut" id="Shortcut_b30k4"]
events = [SubResource("InputEventKey_o7cbd")]

[sub_resource type="InputEventKey" id="InputEventKey_26opn"]
device = -1
keycode = 54
unicode = 54

[sub_resource type="Shortcut" id="Shortcut_dewe6"]
events = [SubResource("InputEventKey_26opn")]

[node name="GUI" type="Control"]
top_level = true
z_index = 110
layout_direction = 1
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_vypfl")
tooltip_scene = ExtResource("2_8t721")
setup_tooltip_scene = ExtResource("3_4amhc")
flying_tooltip_scene = ExtResource("2_8t721")
message_scene = ExtResource("3_ouymi")
path_message_spawn = NodePath("AlwaysUI")

[node name="UiToLogicBindings" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("5_e0e17")

[node name="AlwaysUI" type="CanvasLayer" parent="."]

[node name="BattleUI" type="Control" parent="AlwaysUI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("4_4wdqw")

[node name="LeftSide" type="Control" parent="AlwaysUI/BattleUI"]
layout_mode = 3
anchors_preset = 0
offset_top = -1.0
offset_right = 210.0
offset_bottom = 539.0
mouse_filter = 1

[node name="UnitInfo" parent="AlwaysUI/BattleUI/LeftSide" instance=ExtResource("5_10q7o")]
unique_name_in_owner = true
visible = false
layout_mode = 1
offset_left = -194.0
offset_right = -16.0
offset_bottom = 56.0

[node name="RightSide" type="Control" parent="AlwaysUI/BattleUI"]
visible = false
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -210.0
offset_top = -1.0
offset_bottom = 539.0
grow_horizontal = 0
mouse_filter = 1

[node name="MarginContainer" type="MarginContainer" parent="AlwaysUI/BattleUI/RightSide"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -195.0
offset_right = -13.0
offset_bottom = 302.0
grow_horizontal = 0
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="UnitsList" parent="AlwaysUI/BattleUI/RightSide/MarginContainer" instance=ExtResource("13_iompt")]
unique_name_in_owner = true
layout_mode = 2

[node name="PanelUnitInfo" type="Panel" parent="AlwaysUI/BattleUI/RightSide"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 0
offset_left = 15.0
offset_top = 329.0
offset_right = 197.0
offset_bottom = 528.0
theme = ExtResource("7_omlrh")
script = ExtResource("13_28ycl")

[node name="RichTextLabel" type="RichTextLabel" parent="AlwaysUI/BattleUI/RightSide/PanelUnitInfo"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 8.0
offset_right = -8.0
grow_horizontal = 2
grow_vertical = 2
text = "Unit info"

[node name="BtnZoom100" type="Button" parent="AlwaysUI/BattleUI/RightSide"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 1.0
offset_top = 509.0
offset_right = 51.0
offset_bottom = 540.0
theme = ExtResource("7_omlrh")
text = "100%"

[node name="BtnZoom150" type="Button" parent="AlwaysUI/BattleUI/RightSide"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 54.0
offset_top = 509.0
offset_right = 104.0
offset_bottom = 540.0
theme = ExtResource("7_omlrh")
text = "75%"

[node name="BtnZoom200" type="Button" parent="AlwaysUI/BattleUI/RightSide"]
unique_name_in_owner = true
visible = false
texture_filter = 1
layout_mode = 0
offset_left = 108.0
offset_top = 509.0
offset_right = 158.0
offset_bottom = 540.0
theme = ExtResource("7_omlrh")
text = "50%"

[node name="LabelFPS" type="Label" parent="AlwaysUI/BattleUI"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = -1.0
offset_bottom = 59.0
grow_horizontal = 0
text = "fps"
label_settings = SubResource("LabelSettings_v8nyb")
horizontal_alignment = 2

[node name="LabelIsEnemyTurn" type="Label" parent="AlwaysUI/BattleUI"]
visible = false
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
grow_horizontal = 2
grow_vertical = 2
text = "Is enemy turn"
label_settings = SubResource("LabelSettings_y2ytp")
horizontal_alignment = 1

[node name="TimePointsUI" type="Control" parent="AlwaysUI/BattleUI"]
anchors_preset = 0
offset_left = 24.0
offset_top = 8.0
offset_right = 296.0
offset_bottom = 16.0
mouse_filter = 1
script = ExtResource("17_1dr40")

[node name="ProgressBack" type="ColorRect" parent="AlwaysUI/BattleUI/TimePointsUI"]
visible = false
layout_mode = 0
offset_right = 272.0
offset_bottom = 4.0
color = Color(0.101961, 0.101961, 0.141176, 1)

[node name="Progress" type="ColorRect" parent="AlwaysUI/BattleUI/TimePointsUI"]
layout_mode = 0
offset_right = 208.0
offset_bottom = 4.0
color = Color(0.2, 0.2, 0.27451, 1)

[node name="ProgressHint" type="ColorRect" parent="AlwaysUI/BattleUI/TimePointsUI"]
layout_mode = 0
offset_right = 272.0
offset_bottom = 4.0
color = Color(0.501961, 0.501961, 0.643137, 1)

[node name="WeaponsList" parent="AlwaysUI/BattleUI" instance=ExtResource("14_sae6o")]
layout_mode = 0
offset_left = 8.0
offset_top = 104.0
offset_right = 32.0
offset_bottom = 172.0

[node name="UnitAbils" type="ScrollContainer" parent="AlwaysUI/BattleUI" node_paths=PackedStringArray("btns_container")]
unique_name_in_owner = true
clip_contents = false
layout_mode = 0
offset_left = 40.0
offset_top = 148.0
offset_right = 301.0
offset_bottom = 172.0
horizontal_scroll_mode = 0
script = ExtResource("6_q18j3")
btns_container = NodePath("MarginContainer/HBoxContainer")

[node name="MarginContainer" type="MarginContainer" parent="AlwaysUI/BattleUI/UnitAbils"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="AlwaysUI/BattleUI/UnitAbils/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 2

[node name="BtnMove" type="Button" parent="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 10
toggle_mode = true
button_group = ExtResource("7_7jswe")
shortcut = SubResource("Shortcut_b0hfn")
icon = ExtResource("16_rbp2r")
script = ExtResource("8_7jrsu")
ability = 1

[node name="BtnPush" type="Button" parent="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 10
toggle_mode = true
button_group = ExtResource("7_7jswe")
shortcut = SubResource("Shortcut_em5ud")
text = "Push
"
script = ExtResource("8_7jrsu")
ability = 6

[node name="BtnShoot" type="Button" parent="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 10
toggle_mode = true
button_group = ExtResource("7_7jswe")
shortcut = SubResource("Shortcut_xx4o5")
text = "Shoot"
script = ExtResource("8_7jrsu")
ability = 3

[node name="BtnReload" type="Button" parent="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 10
toggle_mode = true
button_group = ExtResource("7_7jswe")
shortcut = SubResource("Shortcut_5qic7")
icon = ExtResource("18_eefw8")
script = ExtResource("8_7jrsu")
ability = 4

[node name="BtnGrenade" type="Button" parent="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 10
toggle_mode = true
button_group = ExtResource("7_7jswe")
shortcut = SubResource("Shortcut_b30k4")
text = "Throw grenade"
script = ExtResource("8_7jrsu")
ability = 5

[node name="BtnKnife" type="Button" parent="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer"]
texture_filter = 1
layout_mode = 2
theme_override_font_sizes/font_size = 10
toggle_mode = true
button_group = ExtResource("7_7jswe")
shortcut = SubResource("Shortcut_dewe6")
text = "Kick"
script = ExtResource("8_7jrsu")
ability = 2

[node name="BtnNextTurn" type="Button" parent="AlwaysUI/BattleUI"]
unique_name_in_owner = true
texture_filter = 1
layout_mode = 2
offset_left = 256.0
offset_top = 148.0
offset_right = 313.0
offset_bottom = 172.0
grow_horizontal = 0
grow_vertical = 0
theme_override_font_sizes/font_size = 10
shortcut = ExtResource("12_e4ykp")
text = "Next Turn"

[node name="UnitSetupUI" parent="AlwaysUI" instance=ExtResource("15_6tte0")]
visible = false
offset_top = 1.0
offset_bottom = 1.0

[connection signal="on_pressed_btn_action" from="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer/BtnMove" to="UiToLogicBindings" method="_on_btn_move_on_pressed_btn_action"]
[connection signal="on_pressed_btn_action" from="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer/BtnPush" to="UiToLogicBindings" method="_on_btn_push_on_pressed_btn_action"]
[connection signal="on_pressed_btn_action" from="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer/BtnShoot" to="UiToLogicBindings" method="_on_btn_shoot_on_pressed_btn_action"]
[connection signal="on_pressed_btn_action" from="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer/BtnReload" to="UiToLogicBindings" method="_on_btn_reload_on_pressed_btn_action"]
[connection signal="on_pressed_btn_action" from="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer/BtnGrenade" to="UiToLogicBindings" method="_on_btn_grenade_on_pressed_btn_action"]
[connection signal="on_pressed_btn_action" from="AlwaysUI/BattleUI/UnitAbils/MarginContainer/HBoxContainer/BtnKnife" to="UiToLogicBindings" method="_on_btn_knife_on_pressed_btn_action"]
